<resources>
    <string name="app_name">ERent</string>
    <string name="title_activity_login">ERent login</string>

    <string name="err_app_crash">E-Rent has crashed, please, send error report</string>
    <string name="support_email">support@erent.online</string>

    <!-- View time formats -->
    <string name="time_minutes_ago">%d minutes ago</string>
    <string name="time_now">just now</string>
    <string name="time_general">h:mm a</string>

    <!-- Main drawer -->
    <string name="main_drawer_credentials_title_unauthorized">E-Rent service</string>
    <string name="main_drawer_credentials_sub_title_unauthorized">Version build %s</string>
    <string name="main_drawer_profile">Profile</string>
    <string name="main_drawer_conversation">Conversations (1 new)</string>
    <string name="main_drawer_settings">Settings</string>
    <string name="main_drawer_items">Items</string>
    <string name="main_drawer_logout">Logout</string>
    <string name="main_drawer_login">Login</string>
    <string name="main_drawer_open">Open</string>
    <string name="main_drawer_close">Close</string>

    <!-- Registration -->
    <string name="register_operation_progress">Registration in progress, please wait…</string>
    <string name="register_operation_failure">Failed to create account…</string>
    <string name="register_upload_avatar_failure">Failed to upload avatar, proceed…</string>
    <string name="register_operation_success" formatted="false">"You've almost finished! To finish
        registration process, please, visit activation link on your email %s"</string>

    <!-- Authorization -->
    <string name="auth_loading">Loading…</string>
    <string name="auth_loaded">Loaded</string>
    <string name="auth_component_loaded" formatted="false">"Loaded %s component (%d/%d)"</string>
    <string name="auth_component_load_err" formatted="false">"Failed to load %s component: %s"</string>
    <string name="auth_operation_failure">Operation failed</string>
    <string name="auth_operation_failure_formatted" formatted="false">Operation failed: %s</string>

    <!-- Categories activity -->
    <string name="categories_title_activity">Categories</string>
    <string name="categories_refresh">Refresh</string>
    <string name="categories_adv_search">Advanced search</string>
    <string name="categories_no_internet">No internet connection…</string>
    <string name="categories_fetch_err">Failed to fetch brands</string>

    <!-- Items activity -->
    <string name="items_sub_title" formatted="false">%s, %s — by %s</string>
    <string name="items_price" formatted="false">%s UAH</string>
    <string name="items_price_free">free of charge</string>
    <string name="items_to_conversation">To conversation</string>
    <string name="items_search">Search</string>
    <string name="items_search_hint">Enter search query…</string>
    <string name="items_search_not_found">Nothing was found</string>
    <string name="items_empty">No items yet</string>

    <!-- Gallery activity -->
    <string name="gallery_copy_url">Copy url</string>
    <string name="gallery_open_in_browser">Open in browser</string>
    <string name="gallery_pager_title" formatted="false">%d of %d</string>
    <string name="gallery_image_trans_name">image transition</string>
    <string name="gallery_clip_title">Image uri</string>

    <!-- Item details activity -->
    <string name="item_details_main_info" formatted="false">Location %s, %s</string>
    <string name="item_details_item_info_sub">Item info</string>
    <string name="item_details_owner_info_sub">Owner info</string>
    <string name="item_details_complain">Complain</string>
    <string name="item_details_complaint_subj" formatted="false">Complaint on user %s</string>
    <string name="item_details_complaint_body" formatted="false">I want to complain on e-rent item (id %d) which
        belongs to user %s, because it \'CAUSE HERE\'</string>
    <string name="item_details_email_client_chooser">Choose email client</string>
    <string name="item_details_no_email_client">No email clients available</string>

    <!-- Item creation activity -->
    <string name="creation_progress">Operation in progress…</string>
    <string name="creation_refreshing">Refreshing…</string>
    <string name="creation_progress_success">%s was successfully created…</string>
    <string name="creation_category_not_set">Category wasn\'t set</string>
    <string name="creation_region_not_set">Region wasn\'t set</string>
    <string name="creation_brand_not_set">Brand wasn\'t set</string>
    <string name="creation_categories_failure">Failed to fetch categories…</string>
    <string name="creation_brands_failure">Failed to fetch brands…</string>
    <string name="creation_regions_failure">Failed to fetch regions…</string>
    <string name="creation_add_image">Add image</string>
    <string name="creation_clear_images">Clear images</string>
    <string name="creation_pick_dialog_title">Select image</string>

    <!-- My items activity -->
    <string name="my_items_title">My items</string>
    <string name="my_items_empty">You don\'t have any items yet</string>

    <!-- Search fragment -->
    <string name="search_input_hint">Search query…</string>
    <string name="search_price_range">Price range</string>
    <string name="search_categories_failure">Failed to fetch categories…</string>
    <string name="search_brands_failure">Failed to fetch brands…</string>
    <string name="search_regions_failure">Failed to fetch regions…</string>

    <!-- Strings related to signIn -->
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
