<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_views_switcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:rsb="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cards_container_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.ua.erent.module.core.presentation.mvp.view.AdvancedSearchFragment">

            <LinearLayout
                style="@style/ShadowFrameWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="24dp">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/search_back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="10dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="10dp"
                    android:paddingStart="0dp"
                    android:src="@drawable/wr_back_def_24dp" />

                <com.ua.erent.module.core.presentation.mvp.view.util.TypefacedEditText
                    android:id="@+id/search_query_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_input_hint"
                    android:maxLines="1"
                    app:customFont="Roboto-Regular" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/search_go_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="0dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingStart="10dp"
                    android:src="@drawable/wr_search_def_24dp" />

            </LinearLayout>

            <RelativeLayout
                style="@style/ShadowFrameWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.ua.erent.module.core.presentation.mvp.view.util.TypefacedTextView
                    android:id="@+id/search_categories_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="20dp"
                    android:text="@string/search_categories_failure"
                    android:textColor="@color/primary"
                    android:visibility="gone"
                    app:customFont="Roboto-Regular" />

                <ProgressBar
                    android:id="@+id/search_categories_progress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:indeterminate="true" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/search_categories_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/ShadowFrameWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.ua.erent.module.core.presentation.mvp.view.util.TypefacedTextView
                    android:id="@+id/search_brands_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="20dp"
                    android:text="@string/search_brands_failure"
                    android:textColor="@color/primary"
                    android:visibility="gone"
                    app:customFont="Roboto-Regular" />

                <ProgressBar
                    android:id="@+id/search_brands_progress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:indeterminate="true" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/search_brands_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/ShadowFrameWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.ua.erent.module.core.presentation.mvp.view.util.TypefacedTextView
                    android:id="@+id/search_regions_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="20dp"
                    android:text="@string/search_regions_failure"
                    android:textColor="@color/primary"
                    android:visibility="gone"
                    app:customFont="Roboto-Regular" />

                <ProgressBar
                    android:id="@+id/search_regions_progress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:indeterminate="true" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/search_regions_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/ShadowFrameWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.ua.erent.module.core.presentation.mvp.view.util.TypefacedTextView
                    android:id="@+id/search_price_range_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_price_range"
                    app:customFont="Roboto-Medium" />

                <org.florescu.android.rangeseekbar.RangeSeekBar
                    android:id="@+id/search_price_range"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/search_price_range_title"
                    rsb:singleThumb="false"
                    rsb:textAboveThumbsColor="@color/primaryTextB"
                    rsb:thumbDisabled="@drawable/seek_bar_thumb_def"
                    rsb:thumbNormal="@drawable/seek_bar_thumb_def"
                    rsb:thumbPressed="@drawable/seek_bar_thumb_def" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/search_result_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_result_item_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never" />

    </FrameLayout>

</ViewSwitcher>